force-app/main/default/objects/Shop_Quota__c/Shop_Quota__c.object-meta.xml
<CustomObject>
    <description>Production Quotas for a manual input from Sales Managers</description>
    <label>Shop Quota</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Shop Quota</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shop Quotas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>