force-app/main/default/objects/Shop_Quota__c/fields/Difference_Initial_and_Actual_Mt__c.field-meta.xml
<CustomField>
    <fullName>Difference_Initial_and_Actual_Mt__c</fullName>
    <formula>Initial_Quantity_Mt__c  -  Actual_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference. Initial and Actual Mt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>