force-app/main/default/objects/Shop_Quota__c/fields/Initial_Quantity_Mt__c.field-meta.xml
<CustomField>
    <fullName>Initial_Quantity_Mt__c</fullName>
    <inlineHelpText>Quantity added by Sales Manager</inlineHelpText>
    <label>Initial Quantity Mt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>