force-app/main/default/objects/Shop_Quota__c/fields/Required_Quota_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Quota_Date__c</fullName>
    <description>Production month which is required by Sales Managers</description>
    <label>Required Quota Date</label>
    <type>Date</type>
</CustomField>